# ITMOLabworks

./: README.md
labwork-1-Vaniog/: CMakeLists.txt  file.txt  file2.txt  main  main.cpp  wc
labwork-3-Vaniog/: CMakeLists.txt  main.cpp
labwork-3-Vaniog/BMP_Manager/: BMP_Structs.cpp  BMP_Structs.h  WriteAsBMP.cpp  WriteAsBMP.h
labwork-3-Vaniog/Sand_Heap/: SandData.h  SandHeap.cpp  SandHeap.h
labwork-4-Vaniog/: .gitignore  CMakeLists.txt
labwork-4-Vaniog/haf_lib/: Byteset.cpp  Byteset.h  CMakeLists.txt  HafArchive.cpp  HafArchive.h  HafFileHeader.cpp  HafFileHeader.h  HafManager.cpp  HafManager.h  HafMath.cpp  HafMath.h  HafStream.cpp  HafStream.h
labwork-4-Vaniog/parser/: CMakeLists.txt  HafArgs.cpp  HafArgs.h  Parser.cpp  Parser.h
labwork-5-Vaniog/lib/: ArgParser.cpp  ArgParser.h  Argument.cpp  Argument.h  CMakeLists.txt
labwork-5-Vaniog/tests/: argparser_test.cpp
labwork-6-Vaniog/lib/: CMakeLists.txt  IstreamFuncs.cpp  IstreamFuncs.h  Param.cpp  Param.h  Section.cpp  Section.h  parser.cpp  parser.h
labwork-6-Vaniog/tests/: CMakeLists.txt  test_param.cpp  test_parser.cpp
